# ImGui_GLFW_Template

./: .clang-format  .ycm_extra_conf.py  LICENSE.md  README.md  meson.build
inc/: AppGL.hpp
inc/imgui/: ImGui_ImplGlfw.hpp  ImGui_ImplOpenGL.hpp  imconfig.h  imgui.h  imgui_internal.h
inc/stb/: stb_rect_pack.h  stb_textedit.h  stb_truetype.h
src/: Main.cpp
src/imgui/: ImGui_ImplGlfw.cpp  ImGui_ImplOpenGL.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
